# Tyresoles

./: .gitignore  README.md
.agents/workflows/: tauri-build-run.md
back-end/: README.md  Tyresoles.config.json  Tyresoles.slnx  ex.cs  out.txt  test.cs  ty.cs
back-end/TestQuery/: Program.cs  TestQuery.csproj  dump.cs  out.txt
back-end/Tyresoles.Api/: Program.cs  Tyresoles.Api.csproj  Tyresoles.Api.http  appsettings.Development.json  appsettings.json
back-end/Tyresoles.Data/: DataverseDataService.cs  README.md  Tyresoles.Data.csproj  build_errors.txt  build_output.txt
back-end/Tyresoles.Easebuzz/: EasebuzzOptions.cs  EasebuzzServiceCollectionExtensions.cs  EasebuzzUrls.cs  (+2 more)
docs/: EVENT-CALENDAR-ACTIVATION.md  PRODUCTION_RELEASE_GUIDE.md  tyresoles.key  tyresoles.key.pub
forticlient/: forticlient.conf  forticlient_recovery_commands.md
front-end/: .gitignore  README.md  build_output.txt  capacitor.config.ts  check_ecoproc.txt  codegen.ts  codegen_output.txt  find_patterns.cjs  package-lock.json  package.json  playwright.config.ts  refactor.cjs  refactor2.cjs  refactor_dealers.cjs  refactor_orders.cjs  refactor_profile.cjs  refactor_profile_forms.cjs  refactor_vendors.cjs  svelte.config.js  tauri_help.txt  vite.config.ts  vitest.config.ts
front-end/src-tauri/: Cargo.toml  tauri.conf.json
front-end/src-tauri/capabilities/: default.json
front-end/src-tauri/icons/: icon.icns
front-end/src-tauri/src/: app_config.rs  drive_sync.rs  forticlient.rs  fortivpn.rs  lib.rs  rdplaunch.rs  remote_assist.rs  service_checker.rs  vpn_installer.rs
(+688 files in other folders)
