[package]
name = "app"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
dirs = "5"
display-info = "0.5"
enigo = "0.2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tokio = { version = "1", features = ["time", "fs", "io-util", "macros", "rt-multi-thread", "sync"] }
reqwest = { version = "0.12", default-features = true, features = ["stream", "json"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
shell-words = "1.1"
